- TurUuid