@@ -17,6 +17,10 @@
 
 package com.viglet.turing.commons.utils;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
+import com.viglet.turing.commons.exception.TurException;
+import lombok.extern.slf4j.Slf4j;
 import net.lingala.zip4j.ZipFile;
 import org.apache.commons.compress.archivers.ArchiveException;
 import org.apache.commons.compress.archivers.ArchiveOutputStream;
@@ -26,14 +30,11 @@ import org.apache.commons.compress.utils.IOUtils;
 import org.apache.commons.io.FileUtils;
 import org.apache.hc.core5.http.NameValuePair;
 import org.apache.hc.core5.net.URLEncodedUtils;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
-
+import org.springframework.web.multipart.MultipartFile;
 import java.io.*;
-import java.lang.invoke.MethodHandles;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLEncoder;
@@ -43,14 +44,14 @@ import java.text.Normalizer;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
+import java.util.UUID;
 
 /**
  * @author Alexandre Oliveira
  * @since 0.3.6
  */
+@Slf4j
 public class TurCommonsUtils {
-    private static final Logger logger = LogManager.getLogger(MethodHandles.lookup().lookupClass());
-
     private static final String USER_DIR = "user.dir";
     private static final File userDir = new File(System.getProperty(USER_DIR));
 
@@ -85,11 +86,7 @@ public class TurCommonsUtils {
 
     public static void addParameterToQueryString(StringBuilder sbQueryString, String name, String value) {
         if (value != null) {
-            try {
-                sbQueryString.append(String.format("%s=%s&", name, URLEncoder.encode(value, "UTF-8")));
-            } catch (UnsupportedEncodingException e) {
-                logger.error(e.getMessage(), e);
-            }
+            sbQueryString.append(String.format("%s=%s&", name, URLEncoder.encode(value, StandardCharsets.UTF_8)));
         }
     }
 
@@ -97,7 +94,7 @@ public class TurCommonsUtils {
         try {
             return new URI(uri.getRawPath() + "?" + removeAmpersand(sbQueryString));
         } catch (URISyntaxException e) {
-            logger.error(e.getMessage(), e);
+            log.error(e.getMessage(), e);
         }
         return uri;
     }
@@ -150,7 +147,7 @@ public class TurCommonsUtils {
 
             archive.finish();
         } catch (IOException | ArchiveException e) {
-            logger.error(e.getMessage(), e);
+            log.error(e.getMessage(), e);
         }
     }
 
@@ -167,7 +164,7 @@ public class TurCommonsUtils {
                 archive.closeArchiveEntry();
             }
         } catch (IOException e) {
-            logger.error(e.getMessage(), e);
+            log.error(e.getMessage(), e);
         }
     }
 
@@ -191,7 +188,7 @@ public class TurCommonsUtils {
         try {
             Files.createDirectories(store.toPath());
         } catch (IOException e) {
-            logger.error(e.getMessage(), e);
+            log.error(e.getMessage(), e);
         }
         return store;
     }
@@ -202,7 +199,7 @@ public class TurCommonsUtils {
         try {
             Files.createDirectories(newDir.toPath());
         } catch (IOException e) {
-            logger.error(e.getMessage(), e);
+            log.error(e.getMessage(), e);
         }
         return newDir;
     }
@@ -217,7 +214,7 @@ public class TurCommonsUtils {
         try (ZipFile zipFile = new ZipFile(file)) {
             zipFile.extractAll(outputFolder.getAbsolutePath());
         } catch (IllegalStateException | IOException e) {
-            logger.error(e);
+            log.error(e.getMessage(), e);
         }
     }
 
@@ -232,5 +229,52 @@ public class TurCommonsUtils {
             }
         }
         return true;
+    }
+
+    private static File getTempDirectory() {
+        return TurCommonsUtils.addSubDirToStoreDir("tmp");
+    }
+
+    public static File getFileFromMultipart(MultipartFile file) {
+        File localFile = new File(
+                randomTempFileOrDirectory());
+
+        try {
+            file.transferTo(localFile);
+        } catch (IllegalStateException | IOException e) {
+            log.error(e.getMessage(), e);
+        }
+
+        return localFile;
+    }
+
+    public static File extractZipFile(MultipartFile file) {
+
+        File zipFile = getFileFromMultipart(file);
+
+        File extractFolder = new File(
+                randomTempFileOrDirectory());
+        try {
+            TurCommonsUtils.unZipIt(zipFile, extractFolder);
+            FileUtils.deleteQuietly(zipFile);
+        } catch (Exception e) {
+            log.error(e.getMessage(), e);
+        }
+
+        return extractFolder;
+    }
+
+    private static String randomTempFileOrDirectory() {
+        return getTempDirectory().getAbsolutePath().concat(File.separator + "imp_" + UUID.randomUUID());
+    }
+
+    public static String asJsonString(final Object obj) throws TurException {
+        try {
+            ObjectMapper mapper = new ObjectMapper();
+            mapper.configure(SerializationFeature.FAIL_ON_EMPTY_BEANS, false);
+            return mapper.writeValueAsString(obj);
+        } catch (Exception e) {
+            throw new TurException(e);
+        }
     }
 }
